Fixed Demo and Repo button's text alignment.

--- a/app/assets/stylesheets/home.scss
+++ b/app/assets/stylesheets/home.scss
@@ -113,7 +113,7 @@ footer {
   .buttons > button {
     font-size: 4vw;
     background-color: #fff;
-    padding: 0 .5em 0 .5em;
+    // padding: 0 .5em 0 .5em;
     margin: 0 .5em 0 .5em;
     height: 8vh;
   }
@@ -166,7 +166,7 @@ footer {
   .buttons > button {
     font-size: 4vw;
     background-color: #fff;
-    padding: 0 .5em 0 .5em;
+    // padding: 0 .5em 0 .5em;
     margin: 0 .5em 0 .5em;
     height: 8vh;
     width: 8vh;
